[package]
name = "universal_audio_driver"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.48", features = [
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_UI_WindowsAndMessaging"
]}
log = "0.4"
simplelog = "0.12"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
egui = "0.22"
parking_lot = "0.12"